// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Core/Collapsible Default smoke-test 1`] = `
<div data-state="closed"
     class="w-96"
>
  <button type="button"
          aria-controls="radix-:r0:"
          aria-expanded="false"
          data-state="closed"
          class="flex gap-2"
  >
    <h3 class="font-semibold">
      Can I use this in my project?
    </h3>
    <svg xmlns="http://www.w3.org/2000/svg"
         width="24"
         height="24"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-info size-6"
    >
      <circle cx="12"
              cy="12"
              r="10"
      >
      </circle>
      <path d="M12 16v-4">
      </path>
      <path d="M12 8h.01">
      </path>
    </svg>
  </button>
  <div data-state="closed"
       id="radix-:r0:"
       hidden
       style
  >
  </div>
</div>
`;

exports[`Design System/Core/Collapsible Disabled smoke-test 1`] = `
<div data-state="closed"
     data-disabled
     class="w-96"
>
  <button type="button"
          aria-controls="radix-:r1:"
          aria-expanded="false"
          data-state="closed"
          data-disabled
          disabled
          class="flex gap-2"
  >
    <h3 class="font-semibold">
      Can I use this in my project?
    </h3>
    <svg xmlns="http://www.w3.org/2000/svg"
         width="24"
         height="24"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-info size-6"
    >
      <circle cx="12"
              cy="12"
              r="10"
      >
      </circle>
      <path d="M12 16v-4">
      </path>
      <path d="M12 8h.01">
      </path>
    </svg>
  </button>
  <div data-state="closed"
       data-disabled
       id="radix-:r1:"
       hidden
       style
  >
  </div>
</div>
`;
